--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h1 class="header_style">CHI SIAMO</h1>
                 <p class="body_style">Entra con fiducia nel nostro universo, dove la nostra storia è intessuta di anni di esperienza e di un impegno incessante per l'eccellenza.
                     Oltre ad essere fornitori di infissi, siamo artigiani appassionati che plasmano il tuo spazio abitativo con cura e maestria.
-                    Naviga attraverso la sezione 'Chi Siamo' per scoprire il nostro patrimonio, i valori che ci guidano e la forza trainante dietro ogni prodotto che produciamo.
+                    Naviga attraverso la sezione 'Chi Siamo' per scoprire il nostro patrimonio, i valori che ci guidano e la forza trainante dietro ogni prodotto_script che produciamo.
                     La tua casa merita il meglio, e noi siamo qui per offrirtelo. Benvenuto nel cuore di Inda.</p>
                 <div class="list_parole_chiavi">
                     <p class="parola_chiave">Infissi</p>
@@ -146,7 +146,7 @@
 
                 <h1 class="header_style">I NOSTRI PRODOTTI</h1>
                 <p class="body_style">Esplora la nostra esclusiva gamma di Prodotti, progettati per trasformare la tua casa in uno spazio elegante, sicuro e confortevole.
-                    Dalla finestra alla porta, ogni nostro prodotto è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
+                    Dalla finestra alla porta, ogni nostro prodotto_script è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
                     efficienza energetica e stile senza compromessi.
                     Scopri la collezione completa dei nostri Prodotti e porta il comfort e lo stile nella tua casa oggi.</p>
                 <button class="btn_prodotti" onclick="location.href = 'prodotti.html'" ontouchstart="location.href = 'prodotti.html'">SCOPRI I NOSTRI PRODOTTI</button>
