--- a/prodotti.html
+++ b/prodotti.html
@@ -36,7 +36,7 @@
             <div class="nav_links">
                 <a class="link_navbar" href="index.html" >Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-                <a class="link_navbar" href="showroom.html">ShowRoom</a>
+                <a class="link_navbar" href="">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html" style="color: #F0B357; text-decoration: underline">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
@@ -118,7 +118,7 @@
                 Prodotti
             </h1>
             <p>
-                Benvenuti nella nostra collezione di prodotti, un'ode all'eccellenza, all'artigianato italiano e al design senza compromessi. Ogni elemento di questa collezione rappresenta una fusione di eleganza e maestria artigianale. Ci impegniamo a portare avanti la tradizione dell'artigianato italiano, dove la maestria artigiana si unisce alle tecnologie all'avanguardia. Ogni pezzo è frutto di un lavoro accurato, realizzato da esperti artigiani che mettono la loro passione nel creare opere d'arte funzionali. La nostra dedizione alla qualità inizia con la selezione dei materiali. Utilizziamo solo le risorse migliori, dal legno pregiato ai metalli resistenti, garantendo che ogni prodotto sia costruito per durare. Ogni dettaglio è curato con precisione, offrendo un prodotto che unisce estetica e resistenza. La qualità dei nostri prodotti è la nostra promessa. Siamo così sicuri della durata e della bellezza dei nostri articoli che offriamo una garanzia di soddisfazione completa. La tua casa merita solo il meglio, e con i nostri prodotti, hai la certezza di ottenere qualità, stile e un tocco di eleganza italiana. Scopri la nostra collezione di porte e infissi, dove la qualità incontra l'italianità, e trasforma il tuo spazio in un'esperienza di stile senza tempo.
+                Benvenuti nella nostra collezione di prodotti, un'ode all'eccellenza, all'artigianato italiano e al design senza compromessi. Ogni elemento di questa collezione rappresenta una fusione di eleganza e maestria artigianale. Ci impegniamo a portare avanti la tradizione dell'artigianato italiano, dove la maestria artigiana si unisce alle tecnologie all'avanguardia. Ogni pezzo è frutto di un lavoro accurato, realizzato da esperti artigiani che mettono la loro passione nel creare opere d'arte funzionali. La nostra dedizione alla qualità inizia con la selezione dei materiali. Utilizziamo solo le risorse migliori, dal legno pregiato ai metalli resistenti, garantendo che ogni prodotto_script sia costruito per durare. Ogni dettaglio è curato con precisione, offrendo un prodotto_script che unisce estetica e resistenza. La qualità dei nostri prodotti è la nostra promessa. Siamo così sicuri della durata e della bellezza dei nostri articoli che offriamo una garanzia di soddisfazione completa. La tua casa merita solo il meglio, e con i nostri prodotti, hai la certezza di ottenere qualità, stile e un tocco di eleganza italiana. Scopri la nostra collezione di porte e infissi, dove la qualità incontra l'italianità, e trasforma il tuo spazio in un'esperienza di stile senza tempo.
             </p>
         </div>
 
@@ -146,7 +146,7 @@
                 Hai domande sui nostri prodotti o vorresti discutere un progetto con noi? Non esitare, inviaci un'email, ti ricontatteremo il prima possibile.
             </p>
         </div>
-        <button>
+        <button onclick="location.href = 'contatti.html'" ontouchstart="location.href = 'contatti.html'" >
             Contattaci
         </button>
     </div>
