--- a/showroom.html
+++ b/showroom.html
@@ -128,7 +128,7 @@
 
         <div class="subcontainer_section2">
             <h1 style="color: #191A1A">Assistenza Personalizzata</h1>
-            <p>Il nostro team esperto è qui per accompagnarvi in ogni fase, dalla scelta del prodotto più adatto alle vostre esigenze fino alla completa realizzazione del vostro progetto.
+            <p>Il nostro team esperto è qui per accompagnarvi in ogni fase, dalla scelta del prodotto_script più adatto alle vostre esigenze fino alla completa realizzazione del vostro progetto.
                 Siamo qui per trasformare il vostro sogno in una realtà senza compromessi.
                 Entra nel nostro Showroom e inizia il viaggio per trasformare la tua visione in una casa che riflette veramente chi sei. Un sogno, un progetto, una realtà: tutto inizia qui</p>
         </div>
