--- a/prodotto.html
+++ b/prodotto.html
@@ -62,6 +62,11 @@
         <div class="container_immagini">
         </div>
 
+        <div class="container_single_img">
+
+        </div>
+
+
         <div class="container_img_full">
             <div class="img_full">
                 <div class="btn_close">
