--- a/contatti.html
+++ b/contatti.html
@@ -21,7 +21,7 @@
 <body onresize="restoreDesktopMenu(); setSizeContainer();" onload="setSizeContainer();">
 
     <header>
-        <nav class="navbar">
+        <nav class="container_navbar">
             <a href="index.html" class="logo_navbar">
                 <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
             </a>
