--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
 
     <header>
-        <nav class="navbar">
+        <nav class="container_navbar">
             <a href="index.html" class="logo_navbar">
-                <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
+                <img class="logo" src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%">
             </a>
 
 
@@ -62,7 +62,7 @@
 
         <div class="over-text" style="z-index: 19">
                 <span class="logo_grande">
-                    <img src="./Immagini/logo.svg" style="width: 100%; height: 100%;">
+                    <img src="./Immagini/logo.svg" alt="Logo Inda" style="width: 100%; height: 100%;">
                 </span>
             <span class="frase_space">
                     <p class="frase">
@@ -125,7 +125,7 @@
 
         <div  class="section" id="showroom">
             <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
-                <img src="./Immagini/Home/ImgShowRoom.jpg" style="width: 100%; height: 100%">
+                <img src="./Immagini/Home/ImgShowRoom.jpg" alt="Immagine ShowRoom" style="width: 100%; height: 100%">
             </div>
             <div class="descrizione_sezione">
                 <h1 class="header_style">IL NOSTRO<br>SHOW ROOM</h1>
@@ -170,7 +170,6 @@
             <h1 class="footer-header">Recapiti</h1>
             <p class="footer-body">+39 3394487294</p>
             <p class="footer-body">indainfissi@gmail.com</p>
-            <!--<button class="contattaci_footer">Contattaci</button>-->
         </div>
 
         <div class="end_container">
